// Copyright 2021-2024 Zenauth Ltd.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package cerbos.source.v1;

import "cerbos/policy/v1/policy.proto";

option go_package = "github.com/cerbos/cerbos/api/genpb/cerbos/source/v1;sourcev1";

message Position {
  uint32 line = 1;
  uint32 column = 2;
  string path = 3;
}

message Error {
  enum Kind {
    KIND_UNSPECIFIED = 0;
    KIND_PARSE_ERROR = 1;
    KIND_VALIDATION_ERROR = 2;
  }

  Kind kind = 1;
  Position position = 2;
  string message = 3;
  string context = 4;
}

message StartPosition {
  uint32 line = 1;
  uint32 column = 2;
  uint32 offset = 3;
}

message SourceContext {
  StartPosition start_position = 1;
  map<string, Position> field_positions = 2;
  repeated Error errors = 3;
}

message PolicyWrapper {
  uint64 id = 1;
  string key = 2;
  cerbos.policy.v1.Policy policy = 3;
}
